[gd_scene load_steps=6 format=2]

[ext_resource path="res://TemaCraft.tres" type="Theme" id=1]
[ext_resource path="res://UICraftHandler.gd" type="Script" id=2]
[ext_resource path="res://CraftButtons.tres" type="Theme" id=3]
[ext_resource path="res://SlotButton.gd" type="Script" id=4]
[ext_resource path="res://PanelCraft.tres" type="Theme" id=5]

[node name="CraftingStation" type="Node"]

[node name="Background" type="Panel" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
theme = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Background"]
margin_left = 469.79
margin_top = 6.83176
margin_right = 760.79
margin_bottom = 55.8318
rect_scale = Vector2( 2, 2 )
text = "Bem Vindo a estação de criação"

[node name="UICraftHandler" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Layer 1" type="Control" parent="."]
editor/display_folded = true
theme = ExtResource( 3 )

[node name="MaterialsButton" type="Button" parent="Layer 1"]
margin_left = 1230.0
margin_top = 30.0
margin_right = 1420.0
margin_bottom = 90.0
text = "Materiais"

[node name="Text" type="RichTextLabel" parent="Layer 1"]
margin_left = 650.0
margin_top = 100.0
margin_right = 760.0
margin_bottom = 140.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Consumíveis"

[node name="Slot1Button" type="Button" parent="Layer 1"]
margin_left = 120.0
margin_top = 180.5
margin_right = 310.0
margin_bottom = 264.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Slot2Button" type="Button" parent="Layer 1"]
margin_left = 300.0
margin_top = 180.5
margin_right = 490.0
margin_bottom = 264.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Slot3Button" type="Button" parent="Layer 1"]
margin_left = 480.0
margin_top = 180.5
margin_right = 670.0
margin_bottom = 264.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Slot4Button" type="Button" parent="Layer 1"]
margin_left = 120.0
margin_top = 370.5
margin_right = 310.0
margin_bottom = 454.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Slot5Button" type="Button" parent="Layer 1"]
margin_left = 300.0
margin_top = 370.5
margin_right = 490.0
margin_bottom = 454.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Slot6Button" type="Button" parent="Layer 1"]
margin_left = 480.0
margin_top = 370.5
margin_right = 670.0
margin_bottom = 454.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Slot7Button" type="Button" parent="Layer 1"]
margin_left = 120.0
margin_top = 550.5
margin_right = 310.0
margin_bottom = 634.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Slot8Button" type="Button" parent="Layer 1"]
margin_left = 300.0
margin_top = 550.5
margin_right = 490.0
margin_bottom = 634.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Slot9Button" type="Button" parent="Layer 1"]
margin_left = 480.0
margin_top = 550.5
margin_right = 670.0
margin_bottom = 634.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Slot10Button" type="Button" parent="Layer 1"]
margin_left = 120.0
margin_top = 730.5
margin_right = 310.0
margin_bottom = 814.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Slot11Button" type="Button" parent="Layer 1"]
margin_left = 300.0
margin_top = 730.5
margin_right = 490.0
margin_bottom = 814.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Slot12Button" type="Button" parent="Layer 1"]
margin_left = 480.0
margin_top = 730.5
margin_right = 670.0
margin_bottom = 814.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Layer 2" type="Control" parent="."]
editor/display_folded = true
visible = false
theme = ExtResource( 3 )

[node name="ConsumablesButton" type="Button" parent="Layer 2"]
margin_left = 40.0
margin_top = 30.0
margin_right = 230.0
margin_bottom = 90.0
text = "Consumables"

[node name="Text" type="RichTextLabel" parent="Layer 2"]
margin_left = 670.0
margin_top = 100.0
margin_right = 767.0
margin_bottom = 140.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Materiais"

[node name="Slot1Button" type="Button" parent="Layer 2"]
margin_left = 120.0
margin_top = 180.5
margin_right = 310.0
margin_bottom = 264.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Slot2Button" type="Button" parent="Layer 2"]
margin_left = 300.0
margin_top = 180.5
margin_right = 490.0
margin_bottom = 264.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Slot3Button" type="Button" parent="Layer 2"]
margin_left = 480.0
margin_top = 180.5
margin_right = 670.0
margin_bottom = 264.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Slot4Button" type="Button" parent="Layer 2"]
margin_left = 120.0
margin_top = 370.5
margin_right = 310.0
margin_bottom = 454.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Slot5Button" type="Button" parent="Layer 2"]
margin_left = 300.0
margin_top = 370.5
margin_right = 490.0
margin_bottom = 454.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Slot6Button" type="Button" parent="Layer 2"]
margin_left = 480.0
margin_top = 370.5
margin_right = 670.0
margin_bottom = 454.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Slot7Button" type="Button" parent="Layer 2"]
margin_left = 120.0
margin_top = 550.5
margin_right = 310.0
margin_bottom = 634.5
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="IngredientsPanel" type="Panel" parent="."]
margin_left = 870.0
margin_top = 160.0
margin_right = 1210.0
margin_bottom = 440.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="IngredientsText" type="RichTextLabel" parent="IngredientsPanel"]
margin_left = 34.0
margin_top = 60.0
margin_right = 197.0
margin_bottom = 172.0
rect_scale = Vector2( 1.7, 1.7 )

[node name="Text" type="RichTextLabel" parent="IngredientsPanel"]
margin_left = 100.0
margin_top = 10.0
margin_right = 229.0
margin_bottom = 39.0
rect_scale = Vector2( 1.7, 1.7 )
text = "Ingredientes"

[node name="InventoryPanel" type="Panel" parent="."]
margin_left = 870.0
margin_top = 530.0
margin_right = 1210.0
margin_bottom = 810.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="InventoryText" type="RichTextLabel" parent="InventoryPanel"]
margin_left = 39.0
margin_top = 60.0
margin_right = 197.0
margin_bottom = 172.0
rect_scale = Vector2( 1.7, 1.7 )

[node name="Text" type="RichTextLabel" parent="InventoryPanel"]
margin_left = 100.0
margin_top = 10.0
margin_right = 229.0
margin_bottom = 39.0
rect_scale = Vector2( 1.7, 1.7 )
text = "Inventário"

[connection signal="pressed" from="Layer 1/MaterialsButton" to="UICraftHandler" method="_on_LayerButton_pressed" binds= [ 0 ]]
[connection signal="mouse_entered" from="Layer 1/Slot1Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 0 ]]
[connection signal="mouse_exited" from="Layer 1/Slot1Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 1/Slot1Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 0 ]]
[connection signal="mouse_entered" from="Layer 1/Slot2Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 1 ]]
[connection signal="mouse_exited" from="Layer 1/Slot2Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 1/Slot2Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 1 ]]
[connection signal="mouse_entered" from="Layer 1/Slot3Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 2 ]]
[connection signal="mouse_exited" from="Layer 1/Slot3Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 1/Slot3Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 2 ]]
[connection signal="mouse_entered" from="Layer 1/Slot4Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 3 ]]
[connection signal="mouse_exited" from="Layer 1/Slot4Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 1/Slot4Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 3 ]]
[connection signal="mouse_entered" from="Layer 1/Slot5Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 4 ]]
[connection signal="mouse_exited" from="Layer 1/Slot5Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 1/Slot5Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 4 ]]
[connection signal="mouse_entered" from="Layer 1/Slot6Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 5 ]]
[connection signal="mouse_exited" from="Layer 1/Slot6Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 1/Slot6Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 5 ]]
[connection signal="mouse_entered" from="Layer 1/Slot7Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 6 ]]
[connection signal="mouse_exited" from="Layer 1/Slot7Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 1/Slot7Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 6 ]]
[connection signal="mouse_entered" from="Layer 1/Slot8Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 7 ]]
[connection signal="mouse_exited" from="Layer 1/Slot8Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 1/Slot8Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 7 ]]
[connection signal="mouse_entered" from="Layer 1/Slot9Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 8 ]]
[connection signal="mouse_exited" from="Layer 1/Slot9Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 1/Slot9Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 8 ]]
[connection signal="mouse_entered" from="Layer 1/Slot10Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 9 ]]
[connection signal="mouse_exited" from="Layer 1/Slot10Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 1/Slot10Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 9 ]]
[connection signal="mouse_entered" from="Layer 1/Slot11Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 10 ]]
[connection signal="mouse_exited" from="Layer 1/Slot11Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 1/Slot11Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 10 ]]
[connection signal="mouse_entered" from="Layer 1/Slot12Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 11 ]]
[connection signal="mouse_exited" from="Layer 1/Slot12Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 1/Slot12Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 11 ]]
[connection signal="pressed" from="Layer 2/ConsumablesButton" to="UICraftHandler" method="_on_LayerButton_pressed" binds= [ 1 ]]
[connection signal="mouse_entered" from="Layer 2/Slot1Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 0 ]]
[connection signal="mouse_exited" from="Layer 2/Slot1Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 2/Slot1Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 0 ]]
[connection signal="mouse_entered" from="Layer 2/Slot2Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 1 ]]
[connection signal="mouse_exited" from="Layer 2/Slot2Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 2/Slot2Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 1 ]]
[connection signal="mouse_entered" from="Layer 2/Slot3Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 2 ]]
[connection signal="mouse_exited" from="Layer 2/Slot3Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 2/Slot3Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 2 ]]
[connection signal="mouse_entered" from="Layer 2/Slot4Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 3 ]]
[connection signal="mouse_exited" from="Layer 2/Slot4Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 2/Slot4Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 3 ]]
[connection signal="mouse_entered" from="Layer 2/Slot5Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 4 ]]
[connection signal="mouse_exited" from="Layer 2/Slot5Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 2/Slot5Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 4 ]]
[connection signal="mouse_entered" from="Layer 2/Slot6Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 5 ]]
[connection signal="mouse_exited" from="Layer 2/Slot6Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 2/Slot6Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 5 ]]
[connection signal="mouse_entered" from="Layer 2/Slot7Button" to="UICraftHandler" method="_on_SlotButton_mouse_entered" binds= [ 6 ]]
[connection signal="mouse_exited" from="Layer 2/Slot7Button" to="UICraftHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="Layer 2/Slot7Button" to="UICraftHandler" method="_on_SlotButton_pressed" binds= [ 6 ]]
